--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.13",
     "@prisma/client": "^5.10.2",
-    "next": "14.1.1",
+    "next": "latest",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
