--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.13",
     "@prisma/client": "^5.10.2",
     "next": "latest",
+    "nextjs-progressloader": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
